--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Orgs</string>
+    <string name="cesta_de_frutas">Cesta de frutas</string>
+    <string name="laranja_manga_uva">Laranja, manga, uva</string>
+    <string name="value">$12.99</string>
 </resources>
